--- a/scenarioSfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioSfr/weather/forecast/hourly/on-118_metric_e.html
@@ -110,7 +110,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </div>
 </div>
 </nav>
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 	<h2>Vous êtes ici :</h2>
 	<div class="container">
 	<div class="row">
@@ -124,6 +124,18 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 	</nav>
+	<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>Vous êtes ici :</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Accueil</a></li><li>...</li>
+		<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+		</ol>
+	</div>
+</div>
+</nav>
+
 </header>
     
   <div class="container hidden-print">
@@ -180,11 +192,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <main role="main" property="mainContentOfPage" class="container">
-<h1 id="wb-cont">Prévisions 24 heures - Ottawa (Kanata - Orléans)</h1>
+<h1 id="wb-cont">Prévisions horaires - Ottawa (Kanata - Orléans)</h1>
 						<div id="container">
 												<div id="statement">
-										 <h2>
-    <a href="../../../weather/warnings/ottawa-report_e.html">BULLETIN MÉTÉOROLOGIQUE SPÉCIAL EN VIGUEUR</a>
+										 <h2  style="text-decoration: underline !important;">
+    <a href="../../../weather/warnings/ottawa-report_e.html">AVIS DE POUDRERIE EN VIGUEUR EN VIGUEUR - DÉTAILS >></a>
 </h2>
 				</div>
 			<div class="table-responsive">
