--- a/scenarioSfr/weather/warnings/ottawa-report_e.html
+++ b/scenarioSfr/weather/warnings/ottawa-report_e.html
@@ -118,7 +118,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 	<h2>Vous êtes ici :</h2>
 	<div class="container">
 	<div class="row">
@@ -131,6 +131,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 </nav>
+
+<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>Vous êtes ici :</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Accueil</a></li><li>...</li>
+		<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario - sud</a></li>>
+		</ol>
+	</div>
+</div>
+</nav>
+
+
 </header>
 
 <div class="container hidden-print">
