--- a/scenarioS/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioS/weather/forecast/hourly/on-118_metric_e.html
@@ -104,7 +104,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 		<h2>You are here:</h2>
 		<div class="container">
 	<div class="row">
@@ -119,6 +119,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 	</nav>
+	
+	<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>You are here:</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Home</a></li><li>...</li>
+		<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+		</ol>
+	</div>
+</div>
+</nav>
+
 </header>
     
   <div class="container hidden-print">
@@ -172,12 +185,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <main role="main" property="mainContentOfPage" class="container">
-<h1 id="wb-cont">24 Hour Forecast - Ottawa (Kanata - Orléans)</h1>
+<h1 id="wb-cont">Hourly Forecast - Ottawa (Kanata - Orléans)</h1>
 						<div id="container">
 												<div id="statement">
-										 <h2>
-    <a href="../../../weather/warnings/ottawa-report_e.html">SPECIAL WEATHER STATEMENT IN EFFECT</a>
-</h2>
+										 <h2 style="text-decoration: underline !important;">
+    <a href="../../../weather/warnings/ottawa-report_e.html">BLOWING SNOW ADVISORY IN EFFECT - DETAILS >></a>
+  </h2>
+
 				</div>
 			<div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
@@ -207,10 +221,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th class="wxo-th-bkg" colspan="6"></th>
-      </tr>
-      <tr>
+           <tr>
 	       <tr>
         <th class="wxo-th-bkg" colspan="6">01 January 2017</th>
       </tr>
