--- a/scenarioT/weather/city/pages/on-118_metric_e-1.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e-1.html
@@ -202,9 +202,22 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <div id="container">
-  <div id="watch"<div id="watch" style="border: solid 1px #CCC !important; padding: 13px; border-radius: 3px !important; font-size: 18px;"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
-  <div id="mainContent" class="mrgn-tp-lg">
+  <div id="watch" style="border: solid 1px #CCC !important; padding: 13px; border-radius: 3px !important; font-size: 18px;"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
+
+    <div id="mainContent" class="mrgn-tp-lg">
     <section>
+	    
+	<!--Long term addition 1: Lightning box-->
+	<div style=""><img src="../../img/weather/lightning_icon.png"> 
+	    <div style="float: left;>
+		<p style="font-size:14">Lightning</p>
+	        <p>Closest lightning 30 km away</p>
+	        <a href="">More details: lightning map</a>
+	    </div>
+	</div>
+
+	<!--End of lightning box-->
+	    
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading">
           <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   7:00 AM EST Thursday 24 August 2017</span></h2>
