--- a/scenarioT/weather/city/pages/on-118_metric_e-1.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e-1.html
@@ -216,13 +216,17 @@ $(function(){
     <section>
 	    
 	<!--Long term addition 1: Lightning box-->
-	<div style=""><img src="../../img/weather/lightning_icon.png"> 
-	    <div style="float: left;>
-		<p style="font-size:14">Lightning</p>
+	<details class="panel panel-default hidden-xs" open="open">
+	   <summary class="panel-heading">
+		   <h2>Lightning strikes</h2>
+	   </summary>
+   	   <img src="../../img/weather/lightning_icon.png">
+	   <div style="float: left";>
+		<p style="size:14">Lightning</p>
 	        <p>Closest lightning 30 km away</p>
 	        <a href="">More details: lightning map</a>
 	    </div>
-	</div>
+	</details>
 
 	<!--End of lightning box-->
 	    
