--- a/scenarioT/weather/city/pages/on-118_metric_e-1.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e-1.html
@@ -45,7 +45,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script> 
 $(function(){
-  $("#radarmap").load("/includes/franktown-radar.html"); 
+  $("#radarmap").load("../../includes/franktown-radar.html"); 
 });
 </script> 
 <!--end include call script-->
