--- a/scenarioT/weather/city/pages/on-118_metric_e-1.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e-1.html
@@ -220,11 +220,10 @@ $(function(){
 	   <summary class="panel-heading">
 		   <h2>Lightning strikes</h2>
 	   </summary>
-   	   <img src="../../img/weather/lightning_icon.png">
 	   <div style="float: left";>
-		<p style="size:14">Lightning</p>
-	        <p>Closest lightning 30 km away</p>
-	        <a href="">More details: lightning map</a>
+		<img src="../../img/weather/lightning_icon.png">
+		<p style="font-size: 30px">Lightning has recently struck 30km away</p>
+	        <p><a href="">See the lightning map</a></p>
 	    </div>
 	</details>
 
