--- a/scenarioT/weather/city/pages/on-118_metric_e-1.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e-1.html
@@ -220,9 +220,9 @@ $(function(){
 	   <summary class="panel-heading">
 		   <h2>Lightning strikes</h2>
 	   </summary>
-	   <div style="float: left; margin: 20px;">
+	   <div style="margin: 20px;">
 		<img src="../../img/weather/lightning_icon.png" style="margin-right: 30px; margin-top: 10px" >
-		<p style="font-size: 30px">Lightning has recently struck 30km away</p>
+		<p style="font-size: 30px; display: inline">Lightning has recently struck 30km away</p>
 	        <p style="margin-left: 96px"><a href="">See the lightning map</a> to see recent lightning strikes</p>
 	    </div>
 	</details>
