--- a/scenarioT/weather/radar/xft-index_e.html
+++ b/scenarioT/weather/radar/xft-index_e.html
@@ -149,9 +149,7 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="../en.html">Home</a></li><li><a href="../services/environment.html">Environment and natural resources</a></li>
-<li><a href="../index_e.html">Weather information</a></li>
-<li><a href="../mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../en.html">Home</a></li><li>...</li>
 <li><a href="../radar/index_e.html">Radar</a></li>
 		</ol>
 	</div>
