--- a/scenarioT/weather/warnings/ottawa-report_e.html
+++ b/scenarioT/weather/warnings/ottawa-report_e.html
@@ -108,21 +108,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
-	<h2>You are here:</h2>
-	<div class="container">
-	<div class="row">
-		<ol class="breadcrumb">
-		<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../../weather/index_e.html">Weather information</a></li>
-<li><a href="../../weather/mainmenu/alert_menu_e.html">Alerts</a></li>
-<li><a href="../../weather/canada_e.html">Warnings, Watches and Statements</a></li>
-<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario - south</a></li>
-		</ol>
-	</div>
-</div>
-</nav>
-
-<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+<nav role="navigation" id="wb-bc" property="breadcrumb">
 	<h2>You are here:</h2>
 	<div class="container">
 	<div class="row">
@@ -191,10 +177,31 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="row">
 	 <div class="col-xs-12">
 
-    <h2>Watches</h2> <p><span id="ottawatest">5:00 AM EST Thursday 24 August 2017</span><br/> <strong>Severe thunderstorm watch in effect for:</strong> </p> 
+    <h2>Watches</h2> 
+	
+<p><span id="ottawatest">5:00 AM EST Thursday 24 August 2017</span><br/> <strong>Severe thunderstorm watch in effect for:</strong> </p> 
 <ul> <li>Ottawa (Kanata - Orléans), ON</li> <li>Ottawa (Richmond - Metcalfe), ON</li></ul>
+
+
+<strong>Risks of one or more of the following:</strong> </p> 
+<ul> 
+
+<li>Large hail</li> 
+<li>Rainfall up to 50mm</li>
+<li>Flash floods/pooling water</li>
+<li>Damaging winds</li>
+<li>Lightning strikes</li>
+<li>Chance of tornadoes</li>
+
+</ul>
+
+<section class="alert alert-warning">
+ <p> Lightning kills and injures Canadians every year. <a href="../../weather/lightning/ONT-index_e.html" class="alert-link">See map of active strikes</a>.</p>
+</section>
+
+
  <p>Conditions are favourable for the development of severe thunderstorms this afternoon and this evening.<br/><br/>An unstable airmass to the southwest will lead to thunderstorms this afternoon and this evening.  Some of these thunderstorms may become severe with the main threats being hail to the size of loonies and rainfall amounts up to 50 mm.</p>
- <p>Rapidly rising rivers and creeks can sweep away bridges, culverts, buildings, and people. Very large hail can damage property, break windows, dent vehicles and cause serious injury. Intense lightning is likely with any thunderstorm that develops. Remember, severe thunderstorms can produce tornadoes. Heavy downpours can cause flash floods and water pooling on roads. Lightning kills and injures Canadians every year. Remember, when thunder roars, go indoors!<br/><br/>Severe thunderstorm watches are issued when atmospheric conditions are favourable for the development of thunderstorms that could produce one or more of the following: large hail, damaging winds, torrential rainfall.<br/><br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.storm.ec@canada.ca or tweet reports using #NTStorm.</p>
+ <p>Rapidly rising rivers and creeks can sweep away bridges, culverts, buildings, and people. Very large hail can damage property, break windows, dent vehicles and cause serious injury. Intense lightning is likely with any thunderstorm that develops. Remember, severe thunderstorms can produce tornadoes. Heavy downpours can cause flash floods and water pooling on roads. Remember, when thunder roars, go indoors!<br/><br/>Severe thunderstorm watches are issued when atmospheric conditions are favourable for the development of thunderstorms that could produce one or more of the following: large hail, damaging winds, torrential rainfall.<br/><br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.storm.ec@canada.ca or tweet reports using #NTStorm.</p>
 
  
  
