--- a/scenarioR/weather/city/jump_e.html
+++ b/scenarioR/weather/city/jump_e.html
@@ -154,8 +154,8 @@
 
 <p>View the forecast for these locations near Arnprior, Ontario:</p>
 <ul>
-<li><a href="../../city/pages/on-118_metric_e.html">Pontiac, Quebec (25 km)</a></li>
-<li><a href="../../city/pages/on-118_metric_e.html">Renfrew, Ontario (27 km)</a></li>
+<li><a href="../city/pages/qc-19_metric_e.html">Pontiac, Quebec (25 km)</a></li>
+<li><a href="../city/pages/on-58_metric_e.html">Renfrew, Ontario (27 km)</a></li>
 </ul>
 
 <p>Or choose a province or territory for a complete list of available forecast locations:</p>
