--- a/scenarioR/weather/city/pages/qc-19_metric_e.html
+++ b/scenarioR/weather/city/pages/qc-19_metric_e.html
@@ -12,8 +12,8 @@
    <meta name="dcterms.issued" title="W3CDTF" content="2013-04-16" />
    <meta name="dcterms.modified" title="W3CDTF" content="2017-09-05" />
 <!--wxo-b3-->
-<title>Ottawa (Kanata - Orléans), ON - 7 Day Forecast - Environment Canada</title>
-<meta name="dcterms.title" content="Ottawa (Kanata - Orléans) - 7 Day Forecast - Environment Canada">
+<title>Pontiac, QC - 7 Day Forecast - Environment Canada</title>
+<meta name="dcterms.title" content="Pontiac - 7 Day Forecast - Environment Canada">
 <!--[if gte IE 9 | !IE ]><!-->
  <link href="../../../weather/template/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
  <link rel="stylesheet" href="../../../weather/template/GCWeb/css/theme.min.css" />
@@ -33,8 +33,8 @@
  <script>dataLayer1 = [];</script>
  <!-- End Google Tag Manager -->
 
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Weather - Environment Canada" href="../../../weather/rss/city/on-118_e.xml">
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Warning - Environment Canada" href="../../../weather/rss/warning/on-118_e.xml">
+<link rel="alternate" type="application/atom+xml" title="ATOM feed for Pontiac - Weather - Environment Canada" href="../../../weather/rss/city/on-118_e.xml">
+<link rel="alternate" type="application/atom+xml" title="ATOM feed for Pontiac - Warning - Environment Canada" href="../../../weather/rss/warning/on-118_e.xml">
 <link rel="stylesheet" href="../../../weather/city/styles/city.css">
 <link rel="stylesheet" href="../../../weather/cacheable/css/city/city_js.css">
 <link rel="stylesheet" href="../../../weather/template/wxo/css/wxo.css" />
@@ -188,7 +188,7 @@
 <div id='collapsible-alerts' class='container'></div>
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
+<h1 id="wb-cont" property="name">Pontiac, <abbr title="Ontario">QC</abbr>
 </h1>
 <div id="container">
   <div id="noalert" class="hidden-print"><h2><a href="../../../weather/warnings/index_e.html">No Alerts in effect</a></h2></div> 
@@ -196,7 +196,7 @@
     <section>
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading" style="background-color: white !important">
-          <h2>Current conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   3:30 PM EST Tuesday 5 September 2017</span></h2>
+          <h2>Current conditions<span class="small visible-print-inline-block pull-right">Observed at: Gatineau Airport   3:30 PM EST Tuesday 5 September 2017</span></h2>
         </summary>
 		
 		
@@ -243,7 +243,7 @@
           <div class="col-sm-10 text-center">
             <dl class="dl-horizontal mrgn-bttm-0 hidden-xs wxo-conds-tmp mrgn-tp-sm">
               <dt>Observed at:</dt>
-              <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
+              <dd class="mrgn-bttm-0">Gatineau Airport</dd>
               <dt>Date: </dt>
               <dd class="mrgn-bttm-0">3:30 PM EST Tuesday 5 September 2017</dd>
             </dl>
@@ -421,7 +421,7 @@
           <summary>Conditions details</summary>
           <dl class="dl-horizontal mrgn-bttm-lg wxo-conds-xs">
             <dt>Observed at:</dt>
-            <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
+            <dd class="mrgn-bttm-0">Gatineau Airport</dd>
             <dt>Date: </dt>
             <dd class="mrgn-bttm-0">3:30 PM EST Tuesday 5 September 2017</dd>
           </dl>
