--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -204,7 +204,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section>
       <details class="panel panel-default hidden-xs" open="open" style="margin-bottom: 15px !important;">
         <summary class="panel-heading" style="background-color: white !important;">
-          <h2>Current conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   7:00 AM EST Thursday 24 August 2017</span></h2>
+          <h2>Current conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   11:00 AM EST Thursday 24 August 2017</span></h2>
         </summary>
 
 				<!-- MOVED LINKS CODE -->
@@ -271,7 +271,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <div class="col-sm-8 text-left">
             <dl class="dl-horizontal mrgn-bttm-0 hidden-xs wxo-conds-tmp mrgn-tp-sm">
             <p style="margin-left: 44px !important; margin-bottom: 5px !important;">Observed at: <b>Ottawa Macdonald-Cartier Int'l Airport</b></p>
-            <p style="margin-left: 44px !important; margin-bottom: 5px !important;">Date: <b>7:00 AM EST Thursday 24 August 2017</b></p>
+            <p style="margin-left: 44px !important; margin-bottom: 5px !important;">Date: <b>11:00 AM EST Thursday 24 August 2017</b></p>
 
 			   <div class="col-sm-6">
 
@@ -444,7 +444,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <dt>Observed at:</dt>
             <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
             <dt>Date: </dt>
-            <dd class="mrgn-bttm-0">7:00 AM EST Thursday 24 August 2017</dd>
+            <dd class="mrgn-bttm-0">11:00 AM EST Thursday 24 August 2017</dd>
           </dl>
 
 
@@ -602,24 +602,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 			  <tr>
 
-				<th scope="col" style="border-top: none !important; border-bottom: none !important; border-right: 1px #ccc solid;">
-
-					<strong>8:00am</strong>
-
-				</th>
-
-				<th scope="col" style="border-top: none !important; border-bottom: none !important; border-right: 1px #ccc solid;">
-
-					<strong>9:00am</strong>
-
-				</th>
-
-				<th scope="col" style="border-top: none !important; border-bottom: none !important; border-right: 1px #ccc solid;">
-
-					<strong>10:00am</strong>
-
-				</th>
-
+			
 				<th scope="col" style="border-top: none !important; border-bottom: none !important; border-right: 1px #ccc solid;">
 
 					<strong>11:00am</strong>
@@ -708,125 +691,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 			  <tr >
 
-				 <td style="border-right: 1px #ccc solid;"><!-- 8:00 -->
-
-
-
-					<img width="60" height="51" src="../../../weather/weathericons/03.gif" alt="Chance of showers" class="center-block" title="Chance of showers">
-
-
-
-					<p class="mrgn-bttm-0">
-
-					<span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr></span>
-
-					<span class="high wxo-imperial-hide wxo-city-hidden" title="max">68&deg;<abbr title="Fahrenheit">F</abbr></span>
-
-					</p>
-
-
-
-					<p class="">Mostly cloudy</p>
-
-
-
-					<p class="lop text-center" title="Less than 40% chance of rain">
-
-					&lt; 40% chance of rain
-
-					</p>
-
-
-
-					<p class="wind text-center">
-
-					Wind 15 km/h south
-
-					</p>
-
-
-
-				</td>
-
-				<td style="border-right: 1px #ccc solid;"><!-- 9:00 -->
-
-
-
-					<img width="60" height="51" src="../../../weather/weathericons/03.gif" alt="Chance of showers" class="center-block" title="Chance of showers">
-
-
-
-					<p class="mrgn-bttm-0">
-
-					<span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr></span>
-
-					<span class="high wxo-imperial-hide wxo-city-hidden" title="max">68&deg;<abbr title="Fahrenheit">F</abbr></span>
-
-					</p>
-
-
-
-					<p class="">Mostly cloudy</p>
-
-
-
-					<p class="lop text-center" title="Less than 40% chance of rain">
-
-					&lt; 40% chance of rain
-
-					</p>
-
-
-
-					<p class="wind text-center">
-
-					Wind 15 km/h south
-
-					</p>
-
-
-
-			   </td>
-
-				<td style="border-right: 1px #ccc solid;"><!-- 10:00 -->
-
-
-
-					<img width="60" height="51" src="../../../weather/weathericons/03.gif" alt="Chance of showers" class="center-block" title="Chance of showers">
-
-
-
-					<p class="mrgn-bttm-0">
-
-					<span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr></span>
-
-					<span class="high wxo-imperial-hide wxo-city-hidden" title="max">69&deg;<abbr title="Fahrenheit">F</abbr></span>
-
-					</p>
-
-
-
-					<p class="">Mostly cloudy</p>
-
-
-
-					<p class="lop text-center" title="Less than 40% chance of rain">
-
-					&lt; 40% chance of rain
-
-					</p>
-
-
-
-					<p class="wind text-center">
-
-					Wind 15 km/h south
-
-					</p>
-
-
-
-			   </td>
+				 
 
 				<td style="border-right: 1px #ccc solid;"><!-- 11:00 -->
 
@@ -1750,10 +1615,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <h2 >7-day forecast<span class="small visible-print-inline-block pull-right">Issued: 5:00 AM EST Thursday 24 August 2017</span></h2>
         </summary>
         <section>
-          <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv" >Detailed Forecast</span>Issued: 5:00 AM EST Thursday 24 August 2017</h3>
+     
 
 
-		   <div class="row" style="background-color: yellow !important; padding-top: 10px; border-top: solid #ccc 1px; border-left: solid 5px yellow;">
+		   <div class="row" style="background-color: yellow !important; padding-top: 10px; border-left: solid 5px yellow;">
           <a href="../../../weather/warnings/ottawa-report_e.html">
 
             <div style="background-color: yellow !important; text-align: center !important; padding-bottom: 5px;">
