--- a/scenarioT/weather/warnings/ottawa-report_e.html
+++ b/scenarioT/weather/warnings/ottawa-report_e.html
@@ -196,12 +196,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </ul>
 
 <section class="alert alert-warning">
- <p> Lightning kills and injures Canadians every year. <a href="../../weather/lightning/ONT-index_e.html" class="alert-link">See map of active strikes</a>.</p>
+ <p><a href="../../weather/lightning/ONT-index_e.html" class="alert-link">See map of current lightning strikes</a>. Lightning kills and injures Canadians every year. </p>
 </section>
 
 
- <p>Conditions are favourable for the development of severe thunderstorms this afternoon and this evening.<br/><br/>An unstable airmass to the southwest will lead to thunderstorms this afternoon and this evening.  Some of these thunderstorms may become severe with the main threats being hail to the size of loonies and rainfall amounts up to 50 mm.</p>
- <p>Rapidly rising rivers and creeks can sweep away bridges, culverts, buildings, and people. Very large hail can damage property, break windows, dent vehicles and cause serious injury. Intense lightning is likely with any thunderstorm that develops. Remember, severe thunderstorms can produce tornadoes. Heavy downpours can cause flash floods and water pooling on roads. Remember, when thunder roars, go indoors!<br/><br/>Severe thunderstorm watches are issued when atmospheric conditions are favourable for the development of thunderstorms that could produce one or more of the following: large hail, damaging winds, torrential rainfall.<br/><br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.storm.ec@canada.ca or tweet reports using #NTStorm.</p>
+ <p>Conditions are favourable for the development of severe thunderstorms this afternoon and this evening.
+ 
+<p>An unstable airmass to the southwest will lead to thunderstorms this afternoon and this evening.  Some of these thunderstorms may become severe with the main threats being hail to the size of loonies and rainfall amounts up to 50 mm.</p>
+ 
+<p>Severe thunderstorm watches are issued when atmospheric conditions are favourable for the development of thunderstorms that could produce one or more of the following: large hail, damaging winds, torrential rainfall. </p>
+ 
+ <p>Rapidly rising rivers and creeks can sweep away bridges, culverts, buildings, and people. Very large hail can damage property, break windows, dent vehicles and cause serious injury. Intense lightning is likely with any thunderstorm that develops. Remember, severe thunderstorms can produce tornadoes. Heavy downpours can cause flash floods and water pooling on roads. Remember, when thunder roars, go indoors!</p>
+ 
+ <p>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.storm.ec@canada.ca or tweet reports using #NTStorm.</p>
 
  
  
