--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -440,13 +440,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 		<details class="wxo-detailsconds mrgn-tp-md" style="margin-bottom: 0px !important; border: none !important;">
           <summary style="border: none !important;">Conditions details </summary>
-          <dl class="dl-horizontal mrgn-bttm-lg wxo-conds-xs">
-            <dt>Observed at:</dt>
-            <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
-            <dt>Date: </dt>
-            <dd class="mrgn-bttm-0">11:00 AM EST Thursday 24 August 2017</dd>
-          </dl>
-
+         
+       
+            <p style="margin-bottom: 5px !important; padding-left: 22px !important; padding-right: 22px !important;">Observed at: <b>Ottawa Macdonald-Cartier Int'l Airport </b></p>
+            <p style="margin-bottom: 5px !important; padding-left: 22px !important; padding-right: 22px !important;">Date:   <b>11:00 AM EST Thursday 24 August 2017 </b></p> 
 
         </details>
           <dl class="dl-horizontal wxo-conds-xs" style="padding-left: 0px !important; margin-bottom: 5px !important;">
