--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -217,7 +217,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 
-		 <div style="margin-left: 0px !important; padding-left: 30px !important; border: none !important; background-color: #fff !important; border-bottom: 1px #ddd solid !important;">
+		<!-- <div style="margin-left: 0px !important; padding-left: 30px !important; border: none !important; background-color: #fff !important; border-bottom: 1px #ddd solid !important;">
 
 		 <ul class="hidden-print hidden-xs list-inline wxo-move" style="margin-bottom: 0 !important;">
           <li  style="padding-left: 12px !important; padding-right: 25px !important;">
@@ -228,7 +228,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </li>
         </ul>
 
-		</div>
+		</div> -->
 
 <!-- MOVED LINKS CODE -->
 
@@ -1694,22 +1694,6 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </details>
     </section>
 
-<!-- LINKS MOVED UP -->
-
-
-    <ul class="list-unstyled visible-xs wxo-btn" style="margin-top: 15px;">
-
-
-       <!-- hide <a class="btn btn-default btn-sm btn-block" href="../../../weather/radar/xft-index_e.html">Weather radar</a>
-      </li> -->
-  
-	   <li>
-        <a class="btn btn-default btn-sm btn-block" href="../../../weather/satellite/index_e.html">Satellite</a>
-      </li>
-	     <li>
-        <a class="btn btn-default btn-sm btn-block" href="../../../weather/airquality/pages/onaq-008_e.html">Air Quality Health Index</a>
-      </li>
-    </ul>
 
 
     <section class="mrgn-tp-lg visible-xs" style="margin-top: 15px !important;">
@@ -2053,6 +2037,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <li>
         <a class="btn btn-default btn-sm btn-block" href="../../../weather/lightning/ONT-index_e.html">Lightning</a>
       </li>
+      <li>
+        <a class="btn btn-default btn-sm btn-block" href="../../../weather/satellite/index_e.html">Satellite</a>
+      </li>
+	     <li>
+        <a class="btn btn-default btn-sm btn-block" href="../../../weather/airquality/pages/onaq-008_e.html">Air Quality Health Index</a>
+      </li>
+    
 
       <li>
         <a class="btn btn-default btn-sm btn-block" href="../../../weather/warnings/index_e.html">Alerts</a>
