--- a/scenarioT/weather/warnings/ottawa-report_e.html
+++ b/scenarioT/weather/warnings/ottawa-report_e.html
@@ -175,7 +175,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </h1>
 
 <div class="row">
-	 <div class="col-xs-12">
+
+
+<div class="col-md-4 col-xs-12">
 
     <h2>Watches</h2> 
 	
@@ -199,6 +201,24 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
  <p><a href="../../weather/lightning/ONT-index_e.html" class="alert-link">See map of current lightning strikes</a>. Lightning kills and injures Canadians every year. </p>
 </section>
 
+</div>
+
+<div class="col-md-8 hidden-xs" style="padding-top: 45px !important; padding-bottom: 25px !important">
+
+<a href="../../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholder.gif"  /> </a>
+
+</div>
+
+<div class="col-xs-12 visible-xs">
+
+<a href="../../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholdermobile.gif"  /> </a>
+
+</div>
+
+
+<div class="col-xs-12">
+
+
 
  <p>Conditions are favourable for the development of severe thunderstorms this afternoon and this evening.
  
@@ -216,7 +236,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
  
 <section class="followus hidden-print"><h2>Follow:</h2><ul class="list-inline mrgn-tp-lg"><li><a href="/rss/battleboard/nt16_e.xml"><img src="../../weather/cacheable/images/img/feed-icon-14x14.png" alt="ATOM feed" class="mrgn-rght-sm">ATOM</a></li>
 </ul>
-</section></div>
+</section>
+
+
+</div>
 </div>
 
 <div class="device-xs visible-xs"></div>
