--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -532,7 +532,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	
 	 <a href="../../../weather/lightning/ONT-index_e.html" style="text-decoration: none !important;">
 	<div class="alert alert-danger" style="margin-bottom: 0px !important; margin-top: 0px !important;">
-	<p> Coup de foudre tombe à proximité  - <span class="alert-link" style="text-decoration: underline !important;"> voir la carte</span>.</p>
+	<p> Le foudre tombe à proximité  - <span class="alert-link" style="text-decoration: underline !important;"> voir la carte</span>.</p>
 	</div>
 	</a>
     
