--- a/scenarioT/weather/warnings/ottawa-report_e.html
+++ b/scenarioT/weather/warnings/ottawa-report_e.html
@@ -205,13 +205,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <div class="col-md-8 hidden-xs" style="padding-top: 45px !important; padding-bottom: 25px !important">
 
-<a href="../../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholder.gif"  /> </a>
+<a href="../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholder.gif"  /> </a>
 
 </div>
 
 <div class="col-xs-12 visible-xs">
 
-<a href="../../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholdermobile.gif"  /> </a>
+<a href="../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholdermobile.gif"  /> </a>
 
 </div>
 
